--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,13 @@
 {
         "manifest_version": 2,
-        "name": "Get Back to Work",
+        "name": "Facebook Blocker",
         "version": "1.0",
         "description": "Sends a simple alert, reminding you of time being wasted on Facebook. Also keeps count of how many times you check Facebook.",
 
         "content_scripts": [
         {
                 "matches": ["*://*.facebook.com/*"],
-                "js": ["script.js"]
+                "js": ["app.js"]
         }
         ]
 }
-~                                                                               
-~                                                                               
-~                                                                              
