--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,16 @@
 {
-        "manifest_version": 2,
-        "name": "Facebook Blocker",
-        "version": "1.0",
-        "description": "Sends a simple alert, reminding you of time being wasted on Facebook. Also keeps count of how many times you check Facebook.",
-
-        "content_scripts": [
-        {
-                "matches": ["*://*.facebook.com/*"],
-                "js": ["app.js"]
-        }
-        ]
+  "manifest_version": 2,
+  "name": "Facebook Blocker",
+  "version": "1.0",
+  "description": "Sends a simple alert, reminding you of time being wasted on Facebook. Also keeps count of how many times you check Facebook.",
+  "browser_action": {
+    "default_popup": "popup.html"
+   },
+ 
+  "content_scripts": [
+    {
+      "matches": ["*://*.facebook.com/*"],
+      "js": ["app.js"]
+    }
+  ]
 }
